--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,21 @@ a {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.75);
 }
 
+.block-title {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 54px;
+  text-align: center;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #101010;
+}
+
 .header-banner {
   display: block;
   margin: 0 auto;
@@ -138,6 +153,51 @@ a {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.features {
+  background-color: #fafafa;
+  padding: 63px 0 31px;
+}
+
+.cards-features {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 64px;
+}
+
+.features-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 15px;
+}
+.features-card__img {
+  width: 350px;
+  height: 250px;
+}
+
+.card {
+  width: 293px;
+  min-height: 198px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+  padding: 33px 32px 25px 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  top: -98px;
+}
+.card__text {
+  color: #101010;
+  text-align: center;
+}
+.card__link {
+  font-weight: 700;
+  text-align: center;
+  color: #ED4C5C;
+}
+
 @media (max-width: 1110px) {
   .header-row {
     display: flex;
@@ -147,6 +207,19 @@ a {
   }
   .header__login {
     margin-left: 0;
+  }
+  .cards-features {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 9%;
+  }
+  .features-card {
+    margin: 0 30px;
+  }
+}
+@media (max-width: 1000px) {
+  .cards-features {
+    justify-content: center;
   }
 }
 @media (max-width: 768px) {
